alter min and max temp

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 			document.getElementById("tempshow").innerHTML=" " + mydatatwo1+"°C";
 			document.getElementById("Feels_Like").innerHTML="Feels Like: " + feels+"°C";
 			document.getElementById("descriptionshow").innerHTML="Desc.: " + mydatathree;
-			document.getElementById("max-temp").innerHTML="Max-Temp: "+ mydatafour1 +"°C";
-			document.getElementById("min-temp").innerHTML="Min-Temp: "+mydatafive1 +"°C";
+			document.getElementById("max-temp").innerHTML="Min-Temp: "+ mydatafour1 +"°C";
+			document.getElementById("min-temp").innerHTML="Max-Temp: "+mydatafive1 +"°C";
 			document.getElementById("wind-speed").innerHTML="Wind Speed: "+mydatasix +" Km/h";
 			if(mydataicon_id<=233){
 
